# vinylvault

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  makefile  pyproject.toml
.claude/: settings.json
.claude/agent-memory/backend-architect/: MEMORY.md  project_etl_analytics.md
.claude/agent-memory/frontend-developer/: MEMORY.md  css_conventions.md  js_architecture.md
.claude/agents/: backend-architect.md  data-pipeline-engineer.md  frontend-developer.md
.claude/commands/: add-tests.md  changelog.md  create_release_PR.md  document-api.md
.claude/skiils/: coding_standards.md  commit.md
.config/: .env.example
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: api.md  etl.md  game-mechanics.md  game_rules.md  how_to_play_vinylvault.md  how_to_setup_spotify_app.md
src/: __init__.py
src/analytics/: __init__.py  models.py  queries.py  routes.py
src/backend/: __init__.py  config.py  main.py  models.py  score.py  spotify.py
src/cli/: __init__.py  run_etl.py
src/etl/: __init__.py  db.py  enricher.py  models.py  pipeline.py  transformer.py
src/etl/migrations/metadata/: etl_log.sql
src/etl/migrations/raw/: artists.sql  artists_genres.sql  genres.sql  playlist_tracks.sql  playlists.sql  tracks.sql  tracks_artists.sql
src/frontend/: index.html  script.js  styles.css
src/utils/: __init__.py  csv_reader.py
tests/: conftest.py  test_models.py  test_routes.py  test_score.py  test_spotify.py
